# pgp-vlm-compression

./: .bashrc  .gitignore  LICENSE  MLproject  README.md  pyproject.toml
docker/: builder.Dockerfile  training.Dockerfile
make/: clean.mk  env.mk
pgp_vlm_compression/: bdrate_calc.py  evaluate.py  playground.ipynb  plot_results.py  results.json
pgp_vlm_compression/TinyCLIP/: factory.py  model.py
pgp_vlm_compression/data/: utils.py
pgp_vlm_compression/model/: internvl_preproc.py  llava_preproc.py
pgp_vlm_compression/prefiltering/: prefilter.py  text.py  tiling.py  utils.py
pgp_vlm_compression/utils/: utils.py
